Add IndexVersionAllocationDecider alongside NodeVersionAllocationDecider